welcome.lessons.welcome.bdr.BDR.scala.code
var fini = false 
var msglu = A
if (estSurMessage()) {
	litMessage()
}
